# cherry-in-the-haystack

./: .dockerignore  .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  Makefile  README.md  STYLE_GUIDE.md  docker-compose.yml  eslint.config.js  inventory.txt  package.json  pnpm-lock.yaml  pyproject.toml  readDB_deletethis.py  run_pipeline.py  test_local.db  test_pipeline.db  tsconfig.base.json
.archived_codes/scripts/: patch-articles-step1.sql  patch-articles-step4.sql  patch-framework-entities.sql  seed-mock-data.sql
.claude/: settings.local.json
_bmad-output/brainstorming/: brainstorming-session-2026-04-15-session1.md  ideathon-pitch-detail.md
_bmad-output/implementation-artifacts/: 1-1-status-check.md  sprint-status.yaml
_bmad-output/planning-artifacts/: agent-prompt-code-review-session.md  codebase-restructure-memo.md  epic-1-2-fr-to-schema-mapping.md  epic-1-2-team-integration-plan.md  (+5 more)
apps/api/: Dockerfile  (+3 more)
dev/: README.md
docs/: ARCHITECTURE_DECISIONS.md  PRD.md  architecture-DRAFT.md  architecture-api.md  architecture.md  bmm-workflow-status.yaml  codebase-restructure-memo-ko.md  deduplication_pipeline.md  development-guide-api.md  epics.md  github-comprehensive-guide.md  implementation-readiness-report-2025-11-12.md  index.md  onboarding.md  project-overview.md  source-tree-analysis.md  sprint-status.yaml  tech-spec-epic-1.md  ux-design-directions.html  ux-design-specification.md
handbook/: __init__.py
scripts/: seed-mock-data-rollback.sql  seed-mock-data.sql  setup_evidence_layer.sql  setup_local.sh
tests/: test_detailed_pipeline.py
(+347 files in other folders)
